--- a/communities.Rmd
+++ b/communities.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Comunidades"
 author: "Mario Quevedo"
-date: "March 5, 2019"
+date: "Marzo de 2019"
 output: github_document
 ---
 
@@ -14,151 +14,151 @@ knitr::opts_chunk$set(
 library(pander)
 ```
 
-## Introducción al análisis de comunidades ecológicas en R
+## IntroducciÃ³n al anÃ¡lisis de comunidades ecolÃ³gicas en R
 
-El título de este tutorial es un ejemplo de la laxitud del término *comunidad*. Rara vez podemos obtener datos de comunidades completas; los datos se referirán más frecuentemente a *taxocenosis*, o a porciones más o menos arbitrarias de una comunidad ecológica local. En este caso tenemos dos conjuntos de datos: invertebrados fluviales en Asturias, y aves en la Sierra Nevada española. 
+El tÃ­tulo de este tutorial es un ejemplo de la laxitud del tÃ©rmino *comunidad*. Rara vez podemos obtener datos de comunidades completas; los datos se referirÃ¡n mÃ¡s frecuentemente a *taxocenosis*, o a porciones mÃ¡s o menos arbitrarias de una comunidad ecolÃ³gica local. En este caso tenemos dos conjuntos de datos: invertebrados fluviales en Asturias, y aves en la Sierra Nevada espaÃ±ola. 
 
-Antes de entrar a analizar datos, es siempre recomendable echarles un vistazo, especialmente si trabajamos con datos recogidos por otros. Para entender la estuctura de los datos que luego cargaremos para el análisis, lo más fácil es abrir la hoja de cálculo **comunidades.xls** (preparada en LibreOffice pero válida para MS Excel). El archivo incluye varias hojas de cálculo:
+Antes de entrar a analizar datos, es siempre recomendable echarles un vistazo, especialmente si trabajamos con datos recogidos por otros. Para entender la estuctura de los datos que luego cargaremos para el anÃ¡lisis, lo mÃ¡s fÃ¡cil es abrir **comunidades.xls**, incluido en el archivo comprimido **comunidades.zip**. Incluye varias hojas de cÃ¡lculo:
 
-- **esva** contiene datos de abundancia de familias de invertebrados fluviales durante varios muestreos semanales en primavera de 2016, en el [río Esva (occidente de Asturias)](https://es.wikipedia.org/wiki/R%C3%ADo_Esva); formaron parte del TFG de Sara Fernández Rodríguez. Las columnas son los taxones encontrados en las muestras, así como variables adicionales como pH o turbidez del agua.
+- **esva** contiene datos de abundancia de familias de invertebrados fluviales durante varios muestreos semanales en primavera de 2016, en el [r?o Esva (occidente de Asturias)](https://es.wikipedia.org/wiki/R%C3%ADo_Esva); formaron parte del TFG de Sara Fern?ndez Rodr?guez. Las columnas son los taxones encontrados en las muestras, as? como variables adicionales como pH o turbidez del agua.
 
 - **semanas** agrega los datos de **esva** por semana y localidad de muestreo.
 
-- **sierra** contiene parte de los datos utilizados en la Práctica de Aula *Diversidad*; concretamente las abundancias de aves a 5 altitudes en la Sierra Nevada española. 
+- **sierra** contiene parte de los datos utilizados en la Pr?ctica de Aula *Diversidad*; concretamente las abundancias de aves a 5 altitudes en la Sierra Nevada espa?ola. 
 
 - **esva_vegan**, **semanas_vegan** y **sierra_vegan** son versiones simplificadas de las anteriores, conservando solo las abundancias de invertebrados por requisitos de formato de algunas funciones en R.
 
-### Configuración previa
+### Configuraci?n previa
 
-Los procedimientos incluidos a continuación asumen que tenéis instalados [R](https://www.r-project.org/) y [RStudio](https://www.rstudio.com/), y que trabajaréis en este último. Instrucciones al respecto se encuentran en el apartado *Configuración* del módulo **Ecología en código abierto** del Campus Virtual.
+Los procedimientos incluidos a continuaci?n asumen la instalaciÃ³n previa de [R](https://www.r-project.org/) y [RStudio](https://www.rstudio.com/), para trabajar en este Ãºltimo. Instrucciones al respecto se encuentran en el apartado *ConfiguraciÃ³n* del mÃ³dulo **EcologÃ­a en cÃ³digo abierto** del Campus Virtual.
 
 ### Carga de datos 
 Cambiad la carpeta de trabajo a aquella que contenga los archivos de datos (no es imprescindible, pero por el momento facilita el trabajo). En RStudio, `Session :: Set Working Directory :: Choose Directory...`
 
-A continuación, cargad los datos con la línea de código siguiente, o bien haciendo doble *click* sobre el archivo en el explorador.
+A continuaci?n, cargad los datos con la l?nea de c?digo siguiente, o bien haciendo doble *click* sobre el archivo en el explorador.
 ```{r}
 load("communities_DATA.RData")
 ```
 
-El archivo con extensión **RData** contiene las hojas de datos (`data.frame` es el término en la jerga de R). 
+El archivo con extensi?n **RData** contiene las hojas de datos (`data.frame` es el t?rmino en la jerga de R). 
 
-Para ver los datos ya en **RStudio** podemos usar la pestaña **Environment**; esta muestra los distintos conjuntos de datos disponibles en memoria, tras cargar el archivo **RData** anterior. Un icono con forma de tabla sirve para mostrar los datos. A medida que obtengamos resultados, estos pasarán a estar disponibles también en memoria para ser reutilizados, y aparecerán en ese listado. 
+Para ver los datos ya en **RStudio** podemos usar la pesta?a **Environment**; esta muestra los distintos conjuntos de datos disponibles en memoria, tras cargar el archivo **RData** anterior. Un icono con forma de tabla sirve para mostrar los datos. A medida que obtengamos resultados, estos pasar?n a estar disponibles tambi?n en memoria para ser reutilizados, y aparecer?n en ese listado. 
 
-Puede costar acostumbrarse a la presentación cruda de datos en R; para eso tenemos los mismos datos en la hoja de cálculo **comunidades.xls**. En este caso los datos ya están cargados, pero en **RStudio** es sencillo importar datos en varios formatos, incluido el de MS Excel, a través de `File :: Import dataset`.
+Puede costar acostumbrarse a la presentaci?n cruda de datos en R; para eso tenemos los mismos datos en la hoja de c?lculo **comunidades.xls**. En este caso los datos ya est?n cargados, pero en **RStudio** es sencillo importar datos en varios formatos, incluido el de MS Excel, a trav?s de `File :: Import dataset`.
 
 ***
 
 ### Estructura de comunidades
 
-Las funciones más específicas en R están incluidas en librerías adicionales, *packages* en jerga R. Una de esas librerías, diseñada específicamente para calcular métricas de comunidades, es [**vegan**](https://www.rdocumentation.org/packages/vegan/versions/2.4-2).
+Las funciones m?s espec?ficas en R est?n incluidas en librer?as adicionales, *packages* en jerga R. Una de esas librer?as, dise?ada espec?ficamente para calcular m?tricas de comunidades, es [**vegan**](https://www.rdocumentation.org/packages/vegan/versions/2.4-2).
 
-Para instalarla podéis usar los menús de RStudio (`Tools :: Install Packages`, escribiendo *vegan* en el cuadro de diálogo). Lo mismo se consigue con el código `install.packages("vegan", dependencies = TRUE)`. Este se leería en "humano" *instala vegan y otras librerías de las que dependa para funcionar*.
+Para instalarla pod?is usar los men?s de RStudio (`Tools :: Install Packages`, escribiendo *vegan* en el cuadro de di?logo). Lo mismo se consigue con el c?digo `install.packages("vegan", dependencies = TRUE)`. Este se leer?a en "humano" *instala vegan y otras librer?as de las que dependa para funcionar*.
 
-Una vez instalada, habilitamos la librería con: 
+Una vez instalada, habilitamos la librer?a con: 
 ```{r message=FALSE}
 library(vegan)
 ```
 
-#### Índices de diversidad
-Algunas funciones típicas de ecología de comunidades son los **índices de diversidad**. La línea de código siguiente usa la función `diversity` incluida en la libreria de funciones `vegan` para calcular los índices de diversidad de Shannon de cada muestra (fila) de la hoja de datos **esva_vegan**. Además de calcularlos, los almacena en memoria en un objeto llamado **H**:
+#### ?ndices de diversidad
+Algunas funciones t?picas de ecolog?a de comunidades son los **?ndices de diversidad**. La l?nea de c?digo siguiente usa la funci?n `diversity` incluida en la libreria de funciones `vegan` para calcular los ?ndices de diversidad de Shannon de cada muestra (fila) de la hoja de datos **esva_vegan**. Adem?s de calcularlos, los almacena en memoria en un objeto llamado **H**:
 
 ```{r}
 (H <- diversity (esva_vegan, index="shannon"))
 ```
 
-Usamos en este caso **esva_vegan** porque las funciones de análisis de comunidades requieren hojas de datos exclusivamente numéricas, conteniendo solamente las abundancias por taxón.
+Usamos en este caso **esva_vegan** porque las funciones de an?lisis de comunidades requieren hojas de datos exclusivamente num?ricas, conteniendo solamente las abundancias por tax?n.
 
-A continuación, calculamos y almacenamos los índices de diversidad de Simpson en un objeto llamado **D**.
+A continuaci?n, calculamos y almacenamos los ?ndices de diversidad de Simpson en un objeto llamado **D**.
 
 ```{r}
 D <- diversity (esva_vegan, index="invsimpson")
 ```
 
-Observaréis que en este caso no vemos los valores de la D de Simpson. Rodear una orden entre paréntesis, como en el caso anterior, implica mostrar en la consola el resultado, además de guardarlo en memoria. Si queremos ver los valores de diversidad de Simpson, escribimos simplemente `D` en la consola (o los vemos en la pestaña **Environment**). 
+Observar?is que en este caso no vemos los valores de la D de Simpson. Rodear una orden entre par?ntesis, como en el caso anterior, implica mostrar en la consola el resultado, adem?s de guardarlo en memoria. Si queremos ver los valores de diversidad de Simpson, escribimos simplemente `D` en la consola (o los vemos en la pesta?a **Environment**). 
 
-Almacenamos también la riqueza de especies en un objeto llamado **S**, aprovechando la función `specnumber`, que devuelve el número de taxones para cada muestra (fila) de la hoja de datos:
+Almacenamos tambi?n la riqueza de especies en un objeto llamado **S**, aprovechando la funci?n `specnumber`, que devuelve el n?mero de taxones para cada muestra (fila) de la hoja de datos:
 
 ```{r}
 (S <- specnumber(esva_vegan))
 ```
 
-Usando ahora R como una calculadora, obtenemos la equitatividad en *versión Simpson* (se leería *asigna a J el resultado de dividir D por S*):
+Usando ahora R como una calculadora, obtenemos la equitatividad en *versi?n Simpson* (se leer?a *asigna a J el resultado de dividir D por S*):
 
 ```{r}
 J <- D/S
 ```
 
-¿Cómo varía la equitatividad de la comunidad durante el muestreo? Para obtener una primera impresión del contenido de los datos podemos *pintar* esa equitatividad que acabamos de calcular frente al ordinal de la semana de muestreo.
+?C?mo var?a la equitatividad de la comunidad durante el muestreo? Para obtener una primera impresi?n del contenido de los datos podemos *pintar* esa equitatividad que acabamos de calcular frente al ordinal de la semana de muestreo.
 
-El código a continuación se leería: *Pinta J frente a la semanda de muestreo, contenida en la columna "semana" de la hoja __esva__*. El código añade también un título al gráfico, opcional.
+El c?digo a continuaci?n se leer?a: *Pinta J frente a la semanda de muestreo, contenida en la columna "semana" de la hoja __esva__*. El c?digo a?ade tambi?n un t?tulo al gr?fico, opcional.
 
 ```{r}
 plot (J ~ esva$semana, main="Macroinvertebrados; equitatividad; semanas 13 a 22 de 2016")
 ```
 
-#### Acumulación de taxones en función del esfuerzo de muestreo
-Una función para calcular la función de *rarefacción* es `specaccum`. El código a continuación calcula la curva a partir de permutar las muestras 100 veces, y la almacena en `tax_acum` (podemos usar cualquier nombre para los objetos creados). A continuación la pinta con `plot`, definiendo las etiquetas de los ejes X e Y con `xlab` `ylab`:
+#### Acumulaci?n de taxones en funci?n del esfuerzo de muestreo
+Una funci?n para calcular la funci?n de *rarefacci?n* es `specaccum`. El c?digo a continuaci?n calcula la curva a partir de permutar las muestras 100 veces, y la almacena en `tax_acum` (podemos usar cualquier nombre para los objetos creados). A continuaci?n la pinta con `plot`, definiendo las etiquetas de los ejes X e Y con `xlab` `ylab`:
 
 ```{r}
 tax_acum <- (specaccum (esva_vegan,  method="random", permutations = 100)) 
 plot (tax_acum, xlab = "muestras", ylab = "familias")
 ```
-El gráfico muestra el valor central de la curva de acumulación de especies; las barras indican la variación alrededor de ese valor central. Dicho de otra forma, para cada número de muestras tendremos un promedio de especies esperables, y unos intervalos de confianza resultantes de las 100 permutaciones de los datos. 
+El gr?fico muestra el valor central de la curva de acumulaci?n de especies; las barras indican la variaci?n alrededor de ese valor central. Dicho de otra forma, para cada n?mero de muestras tendremos un promedio de especies esperables, y unos intervalos de confianza resultantes de las 100 permutaciones de los datos. 
 
-Observamos en la "comunidad" estudiada la esperable curva asintótica de acumulación de taxones en función del esfuerzo de muestreo o análisis. En este caso es bastante gradual, si bien muestra un cambio de pendiente a partir de 6 - 8 muestras. El esfuerzo de muestreo debería ser superior a ese número de muestras para representar adecuadamente la diversidad de la comunidad.
+Observamos en la "comunidad" estudiada la esperable curva asint?tica de acumulaci?n de taxones en funci?n del esfuerzo de muestreo o an?lisis. En este caso es bastante gradual, si bien muestra un cambio de pendiente a partir de 6 - 8 muestras. El esfuerzo de muestreo deber?a ser superior a ese n?mero de muestras para representar adecuadamente la diversidad de la comunidad.
 
-Una interpretación más naturalista: 10 muestras obtenidas con pescas de red Surber en un río cantábrico encontraron entre 20 y 30 familias distintas de invertebrados de agua dulce.
+Una interpretaci?n m?s naturalista: 10 muestras obtenidas con pescas de red Surber en un r?o cant?brico encontraron entre 20 y 30 familias distintas de invertebrados de agua dulce.
 
-Es posible también *pintar* todas las permutaciones en lugar de la media e intervalos de confianza. Se consigue añadiendo `random = TRUE` a aquella orden `plot`:
+Es posible tambi?n *pintar* todas las permutaciones en lugar de la media e intervalos de confianza. Se consigue a?adiendo `random = TRUE` a aquella orden `plot`:
 
 ```{r}
 plot (tax_acum, xlab = "muestras", ylab = "familias", random = TRUE)
 ```
 
-#### Acumulación de taxones por individuos
-La función `rarecurve` calcula y pinta la acumulación de taxones en función del número de individuos. 
+#### Acumulaci?n de taxones por individuos
+La funci?n `rarecurve` calcula y pinta la acumulaci?n de taxones en funci?n del n?mero de individuos. 
 
 ```{r}
 rarecurve(semanas_vegan, sample = 50, col =  c("black", "forestgreen", "blue", "red", "violet", "orange", "navy"),lwd = 1.5, xlab="individuos identificados", ylab="taxones encontrados")
 ```
-La línea vertical marca el tamaño muestral de referencia, especificado en el código con la opción `sample=`. las líneas horizontales muestran la riqueza de especies correspondiente a ese tamaño de muestra de referencia.
+La l?nea vertical marca el tama?o muestral de referencia, especificado en el c?digo con la opci?n `sample=`. las l?neas horizontales muestran la riqueza de especies correspondiente a ese tama?o de muestra de referencia.
 
-Las posibilidades de análisis son exhaustivas. Podemos por ejemplo extraer con facilidad la pendiente de las curvas para un determinado número de individuos identificados; 20 y 50 en este caso:
+Las posibilidades de an?lisis son exhaustivas. Podemos por ejemplo extraer con facilidad la pendiente de las curvas para un determinado n?mero de individuos identificados; 20 y 50 en este caso:
 
 ```{r}
 rareslope(semanas_vegan, sample=c(20,50))
 ```
 
-Un vistazo a **semanas** ayuda a recordar a qué datos corresponden esos resultados, presentados por filas.
+Un vistazo a **semanas** ayuda a recordar a qu? datos corresponden esos resultados, presentados por filas.
 
 #### Curvas diversidad-dominancia
 
-Los *rangos de abundancias* o curvas deversidad-dominancia se utilizan en la comparación de comunidades basada en la equitatividad. Comunidades en las que los individuos estén más distribuidos entre distintas especies, en lugar de dominadas por muchos individuos de algunas, presentarán pendientes menores.
+Los *rangos de abundancias* o curvas deversidad-dominancia se utilizan en la comparaci?n de comunidades basada en la equitatividad. Comunidades en las que los individuos est?n m?s distribuidos entre distintas especies, en lugar de dominadas por muchos individuos de algunas, presentar?n pendientes menores.
 
-Para que esa comparación no sea meramente cualitativa, *a ojo*, podemos ajustar modelos numéricos a los datos. La función `radfit` ajusta varios modelos de curvas diversidad-dominancia, incluyendo los vistos en clase *reserva de nicho* (*preemption*) y el de *fracción aleatoria o broken-stick* (*null*). 
+Para que esa comparaci?n no sea meramente cualitativa, *a ojo*, podemos ajustar modelos num?ricos a los datos. La funci?n `radfit` ajusta varios modelos de curvas diversidad-dominancia, incluyendo los vistos en clase *reserva de nicho* (*preemption*) y el de *fracci?n aleatoria o broken-stick* (*null*). 
 
-El código a continuación estima con `radfit` que modelo se ajusta mejor a cada una de las 5 altitudes de Sierra Nevada, y los pinta con `plot`.
+El c?digo a continuaci?n estima con `radfit` que modelo se ajusta mejor a cada una de las 5 altitudes de Sierra Nevada, y los pinta con `plot`.
 
 ```{r}
 modelos_sierra <- radfit (sierra_vegan)
 plot (modelos_sierra, xlab="rango de abundancias", ylab="log (abundancia)")
 ```
 
-Una evaluación puramente visual de los datos podría llevarnos a interpretar que el panel 1 (1300 m) y el 5 (3100) corresponden a modelos distintos, ya que la comunidad de aves a 1300 metros es más rica en especies, y aparentemente más equitativa. No obstante, ambos conjuntos de datos se ajustan mejor al modelo de *reserva de nicho*, denominado *preemption* en R.
+Una evaluaci?n puramente visual de los datos podr?a llevarnos a interpretar que el panel 1 (1300 m) y el 5 (3100) corresponden a modelos distintos, ya que la comunidad de aves a 1300 metros es m?s rica en especies, y aparentemente m?s equitativa. No obstante, ambos conjuntos de datos se ajustan mejor al modelo de *reserva de nicho*, denominado *preemption* en R.
 
-Es posible usar la misma función con una parte de los datos, por ejemplo una altitud (o fila). La salida a continuación indica el ajuste numérico de los modelos a los datos abundancia de aves a 1300 m s.n.m., almacenados en la fila 1 de la hoja **sierra_vegan**. Interpretar esa salida se escapa de los contenidos del curso, pero esencialmente el mejor ajuste se produce cuando la desviación de los datos al modelo es mínima (*Deviance*):
+Es posible usar la misma funci?n con una parte de los datos, por ejemplo una altitud (o fila). La salida a continuaci?n indica el ajuste num?rico de los modelos a los datos abundancia de aves a 1300 m s.n.m., almacenados en la fila 1 de la hoja **sierra_vegan**. Interpretar esa salida se escapa de los contenidos del curso, pero esencialmente el mejor ajuste se produce cuando la desviaci?n de los datos al modelo es m?nima (*Deviance*):
 
 ```{r}
 (modelo_1300 <- radfit (sierra_vegan [1,]))
 ```
 
-`plot (modelo_1300)` pinta los 5 modelos superpuestos a los datos del 1300 m s.n.m. En este caso puede resultar más clara una representación en rejilla:
+`plot (modelo_1300)` pinta los 5 modelos superpuestos a los datos del 1300 m s.n.m. En este caso puede resultar m?s clara una representaci?n en rejilla:
 
 ```{r}
 radlattice (modelo_1300)
 ```
 
-Y el equivalente para 2180 m, cuyos datos están en la fila 3 de los datos **sierra_vegan**:
+Y el equivalente para 2180 m, cuyos datos est?n en la fila 3 de los datos **sierra_vegan**:
 
 ```{r}
 (modelo_2180 <- radfit (sierra_vegan [3,]))
