Enlaces al final

--- a/networks.rmd
+++ b/networks.rmd
@@ -12,24 +12,22 @@ El ejercicio requiere la instalación de las librerías `bipartite`, `cheddar` y
 
 ### Los datos
 
-Los datos usados en este ejercicio están en el archivo comprimido **redes.zip** disponible en el Campus Virtual. Al descomprimirlo en la carpeta de trabajo, mostrará 4 archivos de datos separados por comas (.csv), 3 de ellos dentro de una carpeta *foodweb_paine*. Corresponden a los enlaces tróficos del famoso experimento de Paine^1^ excluyendo de charcas de marea a la estrella de mar [*Pisaster ochraceus*](https://eol.org/pages/598469), con el añadido simulado de 8 tipos de productores primarios.
+Los datos usados en este ejercicio están en el archivo comprimido **redes.zip** disponible en el Campus Virtual. Al descomprimirlo en la carpeta de trabajo, mostrará 4 archivos de datos separados por comas (.csv), 3 de ellos dentro de una carpeta *foodweb_paine*. Corresponden a los enlaces tróficos del experimento de Paine^1^ excluyendo de charcas de marea a la estrella de mar *Pisaster ochraceus*^2^, con el añadido simulado de 8 tipos de productores primarios.
 ![](paine_starfish.png)
-^1^ Townsend et al. 2008. Essentials of Ecology. 3rd ed. Fig. 10-07. Blackwell 
 
 ### Visualización de redes tróficas
 
-La librería [*foodweb*](http://www.rdocumentation.org/packages/foodweb) pinta **diagramas tridimensionales e interactivos de redes tróficas**, y analiza redes tróficas. Sin embargo, no está actualizada, por lo que usaremos solo su función de visualización. Para obtener métricas de redes tróficas usaremos después otra librería.
+La librería *foodweb* pinta **diagramas tridimensionales e interactivos de redes tróficas**, y analiza redes tróficas. Sin embargo, no está actualizada, por lo que usaremos solo su función de visualización. Para obtener métricas de redes tróficas usaremos después otra librería.
 
 ```{r echo=TRUE}
 library(foodweb)
 ```
 
-Para poder visualizar el diagrama de la red es necesario previamente ejecutar la función que analiza las propiedades básicas de la red trófica, aunque no usaremos esos resultados: `analyse.single(filename = "foodweb_pkg_paine0.csv")`. Utiliza *foodweb_pkg_paine0.csv*, uno de los archivos .csv contenidos en **redes.zip**.
+Para poder visualizar el diagrama de la red es necesario previamente ejecutar la función que analiza las propiedades básicas de la red trófica, aunque no usaremos esos resultados: `analyse.single (filename = "foodweb_pkg_paine0.csv")` utiliza *foodweb_pkg_paine0.csv*, uno de los archivos .csv contenidos en **redes.zip**.
 
 ```{r include=FALSE}
 analyse.single(filename = "foodweb_pkg_paine0.csv")
 ```
-
 
 El formato de datos requerido por `analyse.single()` es una matriz de vínculos tróficos sin nombres de filas y columnas.
 
@@ -45,7 +43,7 @@ Un vistazo a la representación 3D de esta red trófica simplificada muestra 4 n
 
 ### Análisis de propiedades de redes tróficas
 
-La librería [*cheddar*](https://www.rdocumentation.org/packages/cheddar) proporciona funciones específicas de análisis gráfico y numérico de redes tróficas. Incluye además datos de ejemplo de redes tróficas bien conocidas. La usaremos para obtener las métricas de la red trófica de *Pisaster*.
+La librería *cheddar*^3^ proporciona funciones específicas de análisis gráfico y numérico de redes tróficas; la usaremos para obtener las métricas de la red trófica de *Pisaster*.
 
 ```{r warning=TRUE}
 library(cheddar)
@@ -57,13 +55,13 @@ Para cargar la red trófica adaptada al formato requerido por la librería `ched
 paine_cheddar <- LoadCommunity(dir="foodweb_paine")
 ```
 
-La librería `cheddar` es fácil de usar a pesar de contener muchas funciones. La función `TLPS()` devuelve los **vínculos tróficos** entre las especies o nodos de la red:
+`cheddar` contiene muchas funciones, pero estas son generalmente fáciles de usar. Por ejemplo, la función `TLPS()` devuelve los **vínculos tróficos** entre las especies o nodos de la red que acabamos de asignar a `paine_cheddar`:
 
 ```{r}
 head(TLPS(paine_cheddar))
 ```
 
-En el código anterior `head()` limita la presentación de datos en la salida a las 6 primeras filas.
+`head()` limita la presentación de datos en la salida a las 6 primeras filas.
 
 Las proporciones de nodos caníbales y omnívoros son susceptibles de variar mucho entre distintas comunidades, entre otros factores en función de la productividad, y por ello son objeto habitual de análisis. Las siguientes líneas comprueban si hay nodos caníbales y omnívoros en la red de *Pisaster*: 
 
@@ -82,7 +80,8 @@ A diferencia de los diagramas de la librería `foodweb` en este caso la posició
 PlotWebByLevel(paine_cheddar, main="")
 ```
 
-#### Métrica básica de la red
+#### Métricas básicas de la red
+
 Número de nodos en la red (**S**)
 ```{r message=FALSE, warning=FALSE}
 NumberOfNodes(paine_cheddar)
@@ -112,7 +111,7 @@ PreyAveragedTrophicLevel(paine_cheddar)
 ```
 
 #### Una red trófica completa
-`cheddar` incluye varias redes tróficas reales, publicadas, como ejemplo de las posibilidades de análisis. Una de ellas corresponde al [estuario de Ythan](https://en.wikipedia.org/wiki/Ythan_Estuary), en Escocia. Muchas de las especies incluidas aparecen también en el norte de la Península Ibérica.
+`cheddar` incluye varias redes tróficas reales, publicadas, como ejemplo de las posibilidades de análisis. Una de ellas corresponde al estuario de Ythan^4^, en Escocia. Buena parte de las especies incluidas aparecen también en el norte de la Península Ibérica.
 
 Para cargar esos datos de ejemplo:
 
@@ -120,7 +119,7 @@ Para cargar esos datos de ejemplo:
 data("YthanEstuary")
 ```
 
-**YthanEstuary** aparecerá en el entorno de trabajo como conjunto de datos disponible para las funciones de `cheddar`. Por ejemplo, repasamos qué vínculos contiene con `TLPS()` (si bien limitando la salida a las 6 primeras filas con `head()`:
+**YthanEstuary** aparecerá en el entorno de trabajo como conjunto de datos disponible para las funciones de `cheddar`. Por ejemplo, repasamos qué vínculos contiene con `TLPS()`, si bien limitando la salida a las 6 primeras filas con `head()`. 
 
 ```{r}
 head(TLPS(YthanEstuary))
@@ -140,13 +139,13 @@ DirectedConnectance(YthanEstuary)
 
 La red de Ythan Estuary muestra una densidad de enlaces 1.7 veces mayor que la de *Pisaster*, y una conectancia 2.9 veces menor.
 
-La función usada anteriormente `IsCannibal()` identificará nodos caníbales en la red. Para facilitar la revisión de los resultados, y dado que la red contiene muchos nodos, podemos guardar la salida en un objeto llamado **canibal**:
+La función usada anteriormente `IsCannibal()` identificará nodos caníbales en la red. Para facilitar la revisión de los resultados, y dado que la red contiene muchos nodos, podemos guardar la salida en un objeto llamado por ejemplo **canibal**:
 
 ```{r}
 canibal <- IsCannibal(YthanEstuary)
 ```
 
-A continuación convertimos esos resultados en un conjunto de datos con `as.data.frame(canibal)`, para posteriormente filtrar los contenidos mostrando solo aquellos nodos etiquetados como ídem con `TRUE`: 
+A continuación convertimos esos resultados en un conjunto de datos con `as.data.frame(canibal)`, para posteriormente filtrar los contenidos mostrando solo aquellos nodos etiquetados como caníbales con `TRUE`: 
 
 ```{r include=FALSE}
 as.data.frame(canibal)
@@ -156,7 +155,7 @@ as.data.frame(canibal)
 canibal[canibal==TRUE]
 ```
 
-Dos especies de peces, un [gobio](https://www.fishbase.de/summary/1344) y una [platija](https://www.fishbase.org/summary/Platichthys-flesus.html), y un [cangrejo](https://www.marlin.ac.uk/species/detail/1497) aparecen identificados como caníbales en esta red trófica. Posiblemente un mayor nivel de resolución aportaría más nodos.
+Dos especies de peces, un gobio^5^ y una platija^6^, y un cangrejo^7^ aparecen identificados como caníbales en esta red trófica. Posiblemente un mayor nivel de resolución aportaría más nodos.
 
 Para terminar, extraemos la fracción de nodos basales, omnívoros y caníbales:
 ```{r}
@@ -166,3 +165,13 @@ FractionCannibalistic(YthanEstuary)
 ```
 
 El 46% de los nodos de la red trófica de Ythan Estuary muestra vínculos con más de un nivel trófico. Dicho de otra forma, la omnivoría es prevalente en una red trófica real como esta.
+
+### Enlaces y referencias
+(Mejor con botón drcho. + abrir en nueva pestaña)
+^1^ Townsend et al. 2008. Essentials of Ecology. 3rd ed. Fig. 10-07. Blackwell
+^2^ https://eol.org/pages/598469
+^3^ https://www.rdocumentation.org/packages/cheddar
+^4^ https://en.wikipedia.org/wiki/Ythan_Estuary
+^5^ https://www.fishbase.de/summary/1344
+^6^ https://www.fishbase.org/summary/Platichthys-flesus.html
+^7^ https://www.marlin.ac.uk/species/detail/1497
