--- a/networks.rmd
+++ b/networks.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introducción al análisis de redes de interacciones en R - I"
+title: "Introducción al análisis de redes de interacciones en R - 1"
 author: "Mario Quevedo; "
 date: "Marzo 2019"
 output: github_document
