--- a/networks.rmd
+++ b/networks.rmd
@@ -13,7 +13,7 @@ El ejercicio requiere la instalación de las librerías `cheddar` y `foodweb`, y
 ### Los datos
 
 Los datos usados en este ejercicio están en el archivo comprimido **redes.zip** disponible en el Campus Virtual. Al descomprimirlo en la carpeta de trabajo, mostrará 4 archivos de datos separados por comas (.csv), 3 de ellos dentro de una carpeta *foodweb_paine*. Corresponden a los enlaces tróficos del experimento de Paine^1^ excluyendo de charcas de marea a la estrella de mar *Pisaster ochraceus*^2^, con el añadido simulado de 8 tipos de productores primarios.
-![](paine_starfish.png)
+![](networks_files/figure-markdown_github/paine_starfish.png)
 
 ### Visualización de redes tróficas
 
@@ -37,7 +37,7 @@ Para dibujar el diagrama de la red trófica usamos la función `plotweb()`. Esta
 plotweb (col=c("red", "orange", "blue", "green"), radii=c(15,15,15,15))
 ```
 
-![](paine_starfish_3d.png)
+![](networks_files/figure-markdown_github/paine_starfish_3d.png)
 
 Un vistazo a la representación 3D de esta red trófica simplificada muestra 4 niveles tróficos, omnivoría, y dos compartimentos claros, definidos por productores primarios bentónicos y planctónicos, y consumidores raspadores y filtradores.
 
