Notas al código al final

--- a/stages.Rmd
+++ b/stages.Rmd
@@ -51,13 +51,13 @@ Los ciclos de vida como el generico del esquema anterior pueden ser útiles para
 
 En **R** se pueden dibujar con `plotmat()`, a partir de una matrix de transición. 
 
-La función `plotmat()` tiene una aspecto algo intimidante al admitir muchos argumentos que modifican la estética del ciclo resultante; no todos son necesarios. Un comando simple pinta una versión del ciclo de las orcas:
+La función `plotmat()` tiene una aspecto algo intimidante al admitir muchos argumentos que modifican la estética del ciclo resultante; no todos son necesarios. El comando más simple pinta una versión muy mejorable del ciclo de las orcas:
 
 ```{r}
  plotmat(whale)
 ```
 
-Algunos valores quedan superpuestos en ese diagrama básico, y la disposición de los estadios no es buena. Por eso a continuación usamos el argumento `pos=` en `plotmat()`para definir la posición de los estadios en un espacio XY entre 0 y 1. Esas posiciones las almacenamos primero por comodidad como **posit**, y las usamos después en la función:  
+Algunos valores quedan superpuestos en ese diagrama básico, y la disposición de los estadios no es buena. Por eso a continuación usamos el argumento `pos=` en `plotmat()`para definir la posición de los estadios en un espacio XY^4^ entre 0 y 1:  
 
 ```{r}
 posit <- cbind (c(0.9, 0.9, 0, 0), c(0.9, 0, 0, 0.8))
@@ -67,9 +67,6 @@ plotmat(whale, pos=posit, relsize =0.75, self.shifty=0.05, box.prop = 0.2,
         arr.lcol = "black", arr.type = "triangle")
 ```
 
-**posit** contiene dos columnas, con las posiciones X e Y de los estadios. Así la primera fila (0.9,0.9) corresponde en este caso a la posición de *yearling*.
-El resto de argumentos en la función `plotmat()` retocan aspectos estéticos, como el color de las flechas `arr.col = "green"`.
-   
 ### Calculos básicos
 
 Una vez comprendida la estructura del modelo, procedemos a extraer la información numérica contenida en la matriz de transición; es decir, aquella que es posible obtener de la combinación de valores de supervivencia y fecundidad. La función que extrae buena parte de esa información determinista del modelo es `eigen.analysis()`. Como en el caso anterior, `pander()` es una mera opción estética. Los parámetros están explicados a continuación de la salida:
@@ -121,9 +118,14 @@ stage.vector.plot (whale_nt_2$stage.vectors, ylim = c(0, 0.6))
 
 La convergencia a la distribución estable de estadios es más rápida ante la distribución de abundancias de **n0_whale_1**. Una interpretación posible es que esa distribución inicial corresponde a una población en mejor estado, dado el modelo `whale` con una tasa de crecimiento lambda = 1.025, ligeramente positiva.
 
-### Enlaces y referencias
+### Enlaces, referencias, anotaciones de código
 (Mejor con botón drcho. + abrir en nueva pestaña)  
+
 1. Caswell, H. 2001. Matrix population models: construction, analysis, and interpretation; 2nd ed. Sinauer  
+
 2. https://www.theatlantic.com/science/archive/2017/01/why-do-killer-whales-go-through-menopause/512783/  
-3. O no; ver el ciclo de vida de *Arisaema triphyllum* (datos en Akçakaya HR, Burgman MA, Ginzburg LR. 1999. Applied Population Ecology: Principles and Computer Exercises Using RAMAS EcoLab. Sinauer Associates.):  
+
+3. O no; ver el ciclo de vida de *Arisaema triphyllum* (datos en Akçakaya HR, Burgman MA, Ginzburg LR. 1999. Applied Population Ecology: Principles and Computer Exercises Using RAMAS EcoLab. Sinauer Associates.):
 ![](stages_files/figure-markdown_github/structured_jack_in_the_pulpit_600.jpg)
+
+4. Esas posiciones las almacenamos primero por comodidad como **posit**, y las usamos después en la función. **posit** contiene dos columnas, con las posiciones XY de los estadios. Así la primera fila (0.9,0.9) corresponde en este caso a la posición de *yearling*. El resto de argumentos en la función `plotmat()` retocan aspectos estéticos, como el color de las flechas `arr.col = "green"`.
