--- a/networks.rmd
+++ b/networks.rmd
@@ -12,27 +12,23 @@ El ejercicio requiere la instalación de las librerías `cheddar` y `foodweb`, y
 
 ### Los datos
 
-Los datos usados en este ejercicio están en el archivo comprimido **redes.zip** disponible en el Campus Virtual. Al descomprimirlo en la carpeta de trabajo, mostrará 4 archivos de datos separados por comas (.csv), 3 de ellos dentro de una carpeta *foodweb_paine*. Corresponden a los enlaces tróficos del experimento de Paine^1^ excluyendo de charcas de marea a la estrella de mar *Pisaster ochraceus*^2^, con el añadido simulado de 8 tipos de productores primarios.
+Los datos usados en este ejercicio están en el archivo comprimido **redes.zip** disponible en el Campus Virtual de UniOvi. Al descomprimirlo en la carpeta de trabajo, mostrará 4 archivos de datos separados por comas (.csv), 3 de ellos dentro de una carpeta *foodweb_paine*. Corresponden a los enlaces tróficos del experimento de Paine^1^ excluyendo a la estrella de mar *Pisaster ochraceus* ^2^ de charcas de marea, con el añadido simulado de 8 tipos de productores primarios.
 
 ![](networks_files/figure-markdown_github/paine_starfish.png)
 
 ### Visualización de redes tróficas
 
-La librería *foodweb* pinta **diagramas tridimensionales e interactivos de redes tróficas**, y analiza redes tróficas. Sin embargo, no está actualizada, por lo que usaremos solo su función de visualización. Para obtener métricas de redes tróficas usaremos después otra librería.
+La librería **foodweb** pinta **diagramas tridimensionales e interactivos de redes tróficas**, y extrae métricas habituales en el estudio de las mismas. Sin embargo, no está actualizada, por lo que usaremos solo su función de visualización. Para obtener las métricas usaremos después otra librería.
 
 ```{r echo=TRUE}
 library(foodweb)
 ```
 
-Para poder visualizar el diagrama de la red es necesario previamente ejecutar la función que analiza las propiedades básicas de la red trófica, aunque no usaremos esos resultados: `analyse.single (filename = "foodweb_pkg_paine0.csv")` utiliza *foodweb_pkg_paine0.csv*, uno de los archivos .csv contenidos en **redes.zip**.
-
 ```{r include=FALSE}
 analyse.single(filename = "foodweb_pkg_paine0.csv")
 ```
 
-El formato de datos requerido por `analyse.single()` es una matriz de vínculos tróficos sin nombres de filas y columnas.
-
-Para dibujar el diagrama de la red trófica usamos la función `plotweb()`. Esta abrirá una ventana nueva con diagrama en 3D. Tras maximizar la ventana, es posible usar el ratón para hacer *zoom* y rotar la red. La función solo define los colores y radios de cada nivel trófico.
+Para dibujar el diagrama de la red trófica^3^ usamos la función `plotweb()`. Esta abrirá una ventana nueva con diagrama en 3D. Tras maximizar la ventana, es posible usar el ratón para hacer *zoom* y rotar la red. La función solo define los colores y radios de cada nivel trófico.
 
 ```{r}
 plotweb (col=c("red", "orange", "blue", "green"), radii=c(15,15,15,15))
@@ -40,31 +36,29 @@ plotweb (col=c("red", "orange", "blue", "green"), radii=c(15,15,15,15))
 
 ![](networks_files/figure-markdown_github/paine_starfish_3d.png)
 
-Un vistazo a la representación 3D de esta red trófica simplificada muestra 4 niveles tróficos, omnivoría, y dos compartimentos claros, definidos por productores primarios bentónicos y planctónicos, y consumidores raspadores y filtradores.
+Un vistazo a la representación 3D de esta red trófica simplificada muestra **4 niveles tróficos, omnivoría, y dos compartimentos claros**, definidos por productores primarios bentónicos y planctónicos, y consumidores raspadores y filtradores.
 
 ### Análisis de propiedades de redes tróficas
 
-La librería *cheddar*^3^ proporciona funciones específicas de análisis gráfico y numérico de redes tróficas; la usaremos para obtener las métricas de la red trófica de *Pisaster*.
+La librería **cheddar**^4^ proporciona funciones específicas de análisis gráfico y numérico de redes tróficas; la usaremos para obtener las métricas de la red trófica de *Pisaster*.
 
 ```{r warning=TRUE}
 library(cheddar)
 ```
 
-Para cargar la red trófica adaptada al formato requerido por la librería `cheddar` es necesario usar la función `LoadCommunity()`; esta accede a los tres archivos de texto de la carpeta *foodweb_paine*:
+Para cargar la red trófica adaptada al formato requerido por la librería `cheddar` es necesario usar la función `LoadCommunity()`; esta accede a los tres archivos de texto de la carpeta *foodweb_paine*. Almacenamos los datos en **paine_cheddar**.
 
 ```{r}
 paine_cheddar <- LoadCommunity(dir="foodweb_paine")
 ```
 
-`cheddar` contiene muchas funciones, pero estas son generalmente fáciles de usar. Por ejemplo, la función `TLPS()` devuelve los **vínculos tróficos** entre las especies o nodos de la red que acabamos de asignar a `paine_cheddar`:
+`cheddar` contiene muchas funciones, pero estas son generalmente fáciles de usar. Por ejemplo, la función `TLPS()` devuelve los **vínculos tróficos** entre las especies o nodos de la red. `head()` limita la presentación de datos en la salida a las 6 primeras filas:
 
 ```{r}
 head(TLPS(paine_cheddar))
 ```
 
-`head()` limita la presentación de datos en la salida a las 6 primeras filas.
-
-Las proporciones de nodos caníbales y omnívoros son susceptibles de variar mucho entre distintas comunidades, entre otros factores en función de la productividad, y por ello son objeto habitual de análisis. Las siguientes líneas comprueban si hay nodos caníbales y omnívoros en la red de *Pisaster*: 
+Las proporciones de nodos caníbales y omnívoros son susceptibles de variar mucho entre distintas comunidades, entre otros factores en función de la productividad, y por ello son objeto habitual de análisis. Las siguientes líneas comprueban si hay **nodos caníbales y omnívoros** en la red de *Pisaster*: 
 
 ```{r}
 IsCannibal(paine_cheddar)
@@ -93,7 +87,7 @@ Número de vínculos tróficos (**L**)
 NumberOfTrophicLinks(paine_cheddar)
 ```
 
-Densidad de vínculos y conectancia (**L/S**, **C**)
+Densidad de vínculos y **conectancia** (**L/S**, **C**)
 ```{r}
 LinkageDensity(paine_cheddar)
 DirectedConnectance(paine_cheddar)
@@ -112,7 +106,7 @@ PreyAveragedTrophicLevel(paine_cheddar)
 ```
 
 #### Una red trófica completa
-`cheddar` incluye varias redes tróficas reales, publicadas, como ejemplo de las posibilidades de análisis. Una de ellas corresponde al estuario de Ythan^4^, en Escocia. Buena parte de las especies incluidas aparecen también en el norte de la Península Ibérica.
+`cheddar` incluye varias redes tróficas reales, publicadas, como ejemplo de las posibilidades de análisis. Una de ellas corresponde al estuario de Ythan^5^, en Escocia. Buena parte de las especies incluidas aparecen también en el norte de la Península Ibérica.
 
 Para cargar esos datos de ejemplo:
 
@@ -120,13 +114,13 @@ Para cargar esos datos de ejemplo:
 data("YthanEstuary")
 ```
 
-**YthanEstuary** aparecerá en el entorno de trabajo como conjunto de datos disponible para las funciones de `cheddar`. Por ejemplo, repasamos qué vínculos contiene con `TLPS()`, si bien limitando la salida a las 6 primeras filas con `head()`. 
+**YthanEstuary** aparecerá en el entorno de trabajo. Repasamos por ejemplo **qué vínculos tróficos contiene** con `TLPS()`, si bien limitando la salida a las 6 primeras filas con `head()`. 
 
 ```{r}
 head(TLPS(YthanEstuary))
 ```
 
-Diagrama de la red (mucho más compleja que la simulación de *Pisaster*):
+Pintamos el diagrama de la red, que es mucho más compleja que la simulación de *Pisaster*:
 
 ```{r}
 PlotWebByLevel(YthanEstuary)
@@ -138,7 +132,7 @@ LinkageDensity(YthanEstuary)
 DirectedConnectance(YthanEstuary)
 ```
 
-La red de Ythan Estuary muestra una densidad de enlaces 1.7 veces mayor que la de *Pisaster*, y una conectancia 2.9 veces menor.
+La red de Ythan Estuary muestra una **densidad de enlaces 1.7 veces mayor** que la de *Pisaster*, y una **conectancia 2.9** veces menor.
 
 La función usada anteriormente `IsCannibal()` identificará nodos caníbales en la red. Para facilitar la revisión de los resultados, y dado que la red contiene muchos nodos, podemos guardar la salida en un objeto llamado por ejemplo **canibal**:
 
@@ -146,7 +140,7 @@ La función usada anteriormente `IsCannibal()` identificará nodos caníbales en
 canibal <- IsCannibal(YthanEstuary)
 ```
 
-A continuación convertimos esos resultados en un conjunto de datos con `as.data.frame(canibal)`, para posteriormente filtrar los contenidos mostrando solo aquellos nodos etiquetados como caníbales con `TRUE`: 
+A continuación convertimos esos resultados en un conjunto de datos con `as.data.frame(canibal)`, para posteriormente filtrar los contenidos y mostrar solo aquellos nodos etiquetados como caníbales con `TRUE`: 
 
 ```{r include=FALSE}
 as.data.frame(canibal)
@@ -156,7 +150,7 @@ as.data.frame(canibal)
 canibal[canibal==TRUE]
 ```
 
-Dos especies de peces, un gobio^5^ y una platija^6^, y un cangrejo^7^ aparecen identificados como caníbales en esta red trófica. Posiblemente un mayor nivel de resolución aportaría más nodos.
+Dos especies de peces, gobio^6^ y platija^7^, y un cangrejo^8^ aparecen identificados como caníbales en esta red trófica. Posiblemente un mayor nivel de resolución aportaría más vínculos caníbales.
 
 Para terminar, extraemos la fracción de nodos basales, omnívoros y caníbales:
 ```{r}
@@ -165,14 +159,15 @@ FractionOmnivorous(YthanEstuary)
 FractionCannibalistic(YthanEstuary)
 ```
 
-El 46% de los nodos de la red trófica de Ythan Estuary muestra vínculos con más de un nivel trófico. Dicho de otra forma, la omnivoría es prevalente en una red trófica real como esta.
+El 46% de los nodos de la red trófica de Ythan Estuary muestra vínculos con más de un nivel trófico. Dicho de otra forma, **la omnivoría es prevalente en una red trófica real como esta**.
 
-### Enlaces y referencias
+### Enlaces, referencias, anotaciones de código
 (Mejor con botón drcho. + abrir en nueva pestaña)  
 1. Townsend et al. 2008. Essentials of Ecology. 3rd ed. Fig. 10-07. Blackwell  
 2. https://eol.org/pages/598469  
-3. https://www.rdocumentation.org/packages/cheddar  
-4. https://en.wikipedia.org/wiki/Ythan_Estuary  
-5. https://www.fishbase.de/summary/1344  
-6. https://www.fishbase.org/summary/Platichthys-flesus.html    
-7. https://www.marlin.ac.uk/species/detail/1497
+3. Para poder visualizar el diagrama de la red es necesario previamente ejecutar la función que analiza las propiedades básicas de la red trófica, aunque no usaremos esos resultados: `analyse.single (filename = "foodweb_pkg_paine0.csv")` utiliza *foodweb_pkg_paine0.csv*, uno de los archivos .csv contenidos en **redes.zip**. El formato de datos requerido por `analyse.single()` es una matriz de vínculos tróficos sin nombres de filas y columnas.  
+4. https://www.rdocumentation.org/packages/cheddar  
+5. https://en.wikipedia.org/wiki/Ythan_Estuary  
+6. https://www.fishbase.de/summary/1344  
+7. https://www.fishbase.org/summary/Platichthys-flesus.html    
+8. https://www.marlin.ac.uk/species/detail/1497
